# streamlit_testing

./: .gitignore  README.md  app.py  app_v2.py  app_v2_5.py  app_v3.py  pyproject.toml  requirements.txt  todo.md  util.py
data/: fr0.csv  fr1.csv  fr1.txt  m3_fr20_rankedModels.csv  respostas_usuarios.csv
src/: filter_data.py  logger.py  util.py  util_questions.py  util_texts.py
