[tool.poetry]
name = "avaliation"
version = "0.1.0"
description = ""
authors = ["João Nepomuceno <jnfazevedo@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.0"


[tool.poetry.group.analysis.dependencies]
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
